--- a/apps/orders/.env
+++ b/apps/orders/.env
@@ -1,5 +1,6 @@
-MONGODB_URI=mongodb://mongodb:27017/Restaurant
+MONGODB_URI=mongodb://localhost:27017/Restaurant
 PORT=3000
 
-RABBIT_MQ_URI=amqp://rabbitmq:5672
+RABBIT_MQ_URI=amqp://localhost:5672
 RABBIT_MQ_BILLING_QUEUE=billing
+RABBIT_MQ_AUTH_QUEUE=auth
