--- a/apps/orders/.env
+++ b/apps/orders/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/Restaurant
+MONGODB_URI=mongodb://localhost:27018/ordersdb
 PORT=3000
 
 RABBIT_MQ_URI=amqp://localhost:5672
